Changed order of images

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <div class="cssload-whirlpool"></div>
     <div class="loaderText">This contains 3 high-res images totalling 4.2 MB. It takes time to load.</div>
   </div>
-  <img id="btnHeader" class="back-image hidden" src="Novatree Landing Page - btnHeader.png" alt="Project image">
+  <img id="btnHeader" class="back-image" src="Novatree Landing Page - btnHeader.png" alt="Project image">
   <img id="btnFixed" class="back-image hidden" src="Novatree Landing Page - btnFixed.png" alt="Project image">
-  <img id="colorDoc" class="back-image" src="Novatree Logo Documentation.png" alt="Project image">
+  <img id="colorDoc" class="back-image hidden" src="Novatree Logo Documentation.png" alt="Project image">
   <div class="hover-btn-wrapper">
     <div class="hoverbtns">
       <a href="#" onclick="displayImage('btnHeader')" class="hover-btn">Header Button</a>
